# TidyEngine

./: .gitignore  .gitmodules  BOILERPLATE.txt  Boilerplate  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  TidyEngine.kdev4  freeimage.pc
2Ddemo/: CMakeLists.txt  game.cpp  game.hpp
3Ddemo/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
GLAD/: CMakeLists.txt  glad.c
cmake/modules/: FindCXX11.cmake  FindCXX14.cmake  FindCXX1Z.cmake
demo/: CMakeLists.txt  game.cpp  game.hpp
docs/: index.html
docs/css/: style.css
glad/: CMakeLists.txt
libTidyEngine/: CMakeLists.txt  audio.cpp  audio.hpp  batch.cpp  batch.hpp  bitmap.cpp  bitmap.hpp  cache.cpp  cache.hpp  camera.cpp  camera.hpp  camera2d.cpp  camera2d.hpp  component.cpp  component.hpp  config.hpp  core.cpp  core.hpp  entity.cpp  entity.hpp  entitymanager.cpp  entitymanager.hpp  error.cpp  error.hpp  font.cpp  font.hpp  fontglyph.cpp  fontglyph.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  iomanager.cpp  iomanager.hpp  luascript.cpp  luascript.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  (+43 more)
old/: makefile
shaders/: grid.vert  model-color.frag  model-color.vert  model-texture.frag  model-texture.vert  model.frag  model.vert  shader.frag  shader.vert  sprite.frag  sprite.vert
src/: .game.cpp.swp  .game.h.swp  .input.cpp.swp  .input.h.swp  .main.cpp.swp  .makefile.swo  .makefile.swp  .screen.cpp.swp  .screen.h.swp  CMakeLists.txt  actor.cpp  actor.h  cache.cpp  cache.h  component.h  config.h.in  core.cpp  core.h  game.cpp  game.h  input.cpp  input.h  main.cpp  makefile  screen.cpp  screen.h  sheetcache.cpp  sheetcache.h  sprite.cpp  sprite.h  spritesheet.cpp  spritesheet.h  texcache.cpp  texcache.h
src/Components/: component.cpp  component.h  controller.cpp  controller.h  sprite.cpp  sprite.h
src/Core/: core.cpp  core.h  input.cpp  input.h
src/Entities/: actor.cpp  actor.h
src/Graphics/: draw.cpp  draw.h  renderable.cpp  renderable.h  screen.cpp  screen.h  spritesheet.cpp  spritesheet.h
src/RM/: cache.cpp  cache.h  fontcache.cpp  fontcache.h  sheetcache.cpp  sheetcache.h  soundcache.cpp  soundcache.h  texcache.cpp  texcache.h
test/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
